Stack and Queue updated and main implementation for calls

--- a/Assignments/8thSessionAssignment/FunctionsForLinkedList/2.cbp
+++ b/Assignments/8thSessionAssignment/FunctionsForLinkedList/2.cbp
@@ -31,6 +31,14 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="LinkedQueue.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LinkedQueue.h" />
+		<Unit filename="LinkedStack.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LinkedStack.h" />
 		<Unit filename="Linkedlist.c">
 			<Option compilerVar="CC" />
 		</Unit>
